Fixes Stuff with Levelup and Cure, as well as Updates DarkArmor Texture

--- a/elements/Pureafyingapp.mod.json
+++ b/elements/Pureafyingapp.mod.json
@@ -24,7 +24,10 @@
     "damageOnCrafting": false,
     "enableMeleeDamage": false,
     "damageVsEntity": 0.0,
-    "specialInfo": [],
+    "specialInfo": [
+      "Seems to stop the Darkness",
+      "if brewed correctly..."
+    ],
     "hasGlow": false,
     "guiBoundTo": "<NONE>",
     "inventorySize": 9,
