--- a/elements/Pureafyingapp.mod.json
+++ b/elements/Pureafyingapp.mod.json
@@ -24,10 +24,7 @@
     "damageOnCrafting": false,
     "enableMeleeDamage": false,
     "damageVsEntity": 0.0,
-    "specialInfo": [
-      "Seems to stop the Darkness",
-      "if brewed correctly..."
-    ],
+    "specialInfo": [],
     "hasGlow": false,
     "guiBoundTo": "<NONE>",
     "inventorySize": 9,
