--- a/elements/DarkBiome.mod.json
+++ b/elements/DarkBiome.mod.json
@@ -9,6 +9,9 @@
     "undergroundBlock": {
       "value": "CUSTOM:Darkdirt"
     },
+    "underwaterBlock": {
+      "value": ""
+    },
     "airColor": {
       "value": -10066330,
       "falpha": 0.0
@@ -47,7 +50,7 @@
       "value": "EXPLOSION_NORMAL"
     },
     "particlesProbability": 0.5,
-    "biomeCategory": "NONE",
+    "biomeCategory": "PLAINS",
     "rainingPossibility": 0.0,
     "temperature": 0.2,
     "baseHeight": 0.1,
@@ -55,8 +58,11 @@
     "spawnBiome": true,
     "spawnBiomeNether": false,
     "spawnInCaves": false,
-    "biomeWeight": 1,
-    "biomeDictionaryTypes": [],
+    "biomeWeight": 100,
+    "biomeDictionaryTypes": [
+      "FOREST",
+      "PLAINS"
+    ],
     "grassPerChunk": 0,
     "seagrassPerChunk": 0,
     "flowersPerChunk": 0,
