Fixes Dark Caves biome, as well as adds Deepslate Ores to the infection list and changes how the mod displays in the Mod List in-game!

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,11 +4,15 @@ license="Academic Free License v3.0"
 
 [[mods]]
 modId="dark_infection"
-version="1.0.0"
-displayName="dark infection"
+version="0.9.4"
+displayName="Dark Infection"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
-authors="quinn, MCreator"
+logoFile="logo.png"
+authors="quinn, MCreator, FiveNights2161"
+description='''
+Infect Everything!
+'''
 
 [[dependencies.dark_infection]]
     modId="minecraft"
