--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,15 +4,11 @@ license="Academic Free License v3.0"
 
 [[mods]]
 modId="dark_infection"
-version="0.9.4"
-displayName="Dark Infection"
+version="1.0.0"
+displayName="dark infection"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
-logoFile="logo.png"
-authors="quinn, MCreator, FiveNights2161"
-description='''
-Infect Everything!
-'''
+authors="quinn, MCreator"
 
 [[dependencies.dark_infection]]
     modId="minecraft"
